# laser-measles

./: .cookiecutterrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README.rst  index.html  llms.txt  mkdocs.ci.yml  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.claude/: settings.local.json
.github/workflows/: build-jenner-doc.yml  bump-version.yml  debug-shell.yml  github-actions.yml  manual-version-bump.yml  mkdocs-ghp.yml  mkdocs-pr.yml  publish-pypi.yml  version-bump.yml
agent-docs/: README.md
agent-docs/scripts/: generate_skill_collection.py
authors/: index.html
ci/: requirements.txt
code-of-conduct/: index.html
comps/: .gitignore  Dockerfile  README.md  main_measles.py  plot_outputs.py  requirements-container.txt  requirements.txt  retrieve_outputs.py  run_comps.py  run_comps2.py  run_laser_with_sif.py
concat_mkdocs/: index.html
contributing/: index.html
docs/: Dockerfile  authors.md  code-of-conduct.md  concat_mkdocs.py  conf.py  index.md  index.rst  install.md  installation.rst  mkdocs.md  requirements.txt  results.md  snapshotting.md  tutorials.rst  usage.md  usage.rst  whatsnew.md
docs/_templates/: custom-function-template.rst
docs/api/: index.rst
docs/components/: custom-component.md  index.md  troubleshooting.md  worked-examples.md
docs/customization/: gen-files.py
docs/includes/: glossary.md
docs/model-types/: choosing-a-model.md  configuring-spatial-mixing.md  demographics.md  index.md  spatial-mixing.md
docs/snapshotting/: index.md  snapshot-resume.md
docs/topic-types/: explanation.md  howto.md  reference.md  single-source.md  tutorial.md
docs/tutorials/: README.md  convert_tutorials.py  create_ipynb.sh  index.md  tut_abm_intro.py  tut_abm_vital_dynamics.py  tut_basic_model.py  tut_calibration_spatial.ipynb  tut_calibration_spatial.py  tut_chain_mixing.ipynb  tut_chain_mixing.py  tut_creating_component.py  tut_model_structure.py  tut_pydantic_component_parameters.py  tut_quickstart_hello_world.py  tut_random_numbers.py  tut_scenarios.py  tut_spatial_mixing.py  tut_state_arrays.py  tut_vaccination.py
docs/user-guide/: index.md  results.md  troubleshooting.md
docs/user-guides/: index.md  usage.md
install/: index.html
reference/SUMMARY/: index.html
reference/laser/: index.html
sandbox/3-model-calib-jenner/: calib.db  make_reference_ensemble.py  plot_biweekly.py  plot_heatmap.py  plot_truth.py  run_ref_model.py  truth_config_v1.json
sandbox/3-model-calib-jenner_rabiesish/: make_reference.py  reference.py
scripts/: bump_version.py  concat_mkdocs.py  convert_tutorials.py
search/: search_index.json
skills-collections/.generated/: README.md
src/laser/measles/: api.py  (+7 more)
tests/scientific/: test_logistic_growth.py
tests/unit/: plot_snapshot_continuity.py  plot_snapshot_continuity_compartmental.py  test_base_component.py  test_base_model.py  test_component_name_defaulting.py  test_constant_pop.py  test_gadm.py  test_importation_pressure.py  test_infection_params_mixer.py  test_infection_process_mixing_matrix.py  test_infection_seeding.py  test_network_math.py  test_params_no_silent_ignore.py  test_progress_bar.py  test_results_writer.py  test_scenario_pop_coercion.py  test_sia_calendar.py  test_snapshot.py  test_snapshot_compartmental.py  test_state_array.py  test_tracker_axis_label_alignment.py  test_transmission.py  test_verbose_standardization.py  test_vital_dynamics.py  test_wpp_vital_dynamics.py  test_write_results.py  test_write_results_hierarchical_ids.py
tools/: add_plot_descriptions.py
tools/plot_descriptions/: config.json  tut_abm_vital_dynamics_age_pyramid.md  tut_abm_vital_dynamics_pop_vs_length.md  tut_basic_model_biweekly_three_panel.md  tut_basic_model_compartmental_three_panel.md  tut_basic_model_population_scatter.md  tut_calibration_spatial_bimodal_arc.md  tut_calibration_spatial_chain_layout.md  tut_calibration_spatial_single_sim.md  tut_calibration_spatial_tpe_convergence.md  tut_chain_mixing_allowed_mask.md  tut_chain_mixing_migration_matrix.md  tut_chain_mixing_population_flow.md  tut_chain_mixing_scenario_layout.md  tut_quickstart_hello_world_three_panel.md  tut_spatial_mixing_gravity_vs_radiation.md  tut_spatial_mixing_scenarios.md  tut_vaccination_preexisting_immunity.md  tut_vaccination_routine_immunization.md  tut_vaccination_sia_campaigns.md
tutorials/: index.html
tutorials/ETH/: gadm41_ETH_1.dbf  gadm41_ETH_1_700km.dbf  gadm41_ETH_1_700km.shp  gadm41_ETH_1_700km.shx
tutorials/convert_tutorials/: index.html
tutorials/tut_abm_intro/: index.html  tut_abm_intro.ipynb
tutorials/tut_abm_vital_dynamics/: index.html  tut_abm_vital_dynamics.ipynb  tut_abm_vital_dynamics.py
tutorials/tut_basic_model/: index.html  tut_basic_model.ipynb  tut_basic_model.py
tutorials/tut_calibration_spatial/: index.html  tut_calibration_spatial.ipynb  tut_calibration_spatial.py
tutorials/tut_chain_mixing/: index.html  tut_chain_mixing.ipynb
tutorials/tut_creating_component/: index.html  tut_creating_component.ipynb
tutorials/tut_model_structure/: index.html  tut_model_structure.ipynb  tut_model_structure.py
tutorials/tut_pydantic_component_parameters/: index.html  tut_pydantic_component_parameters.ipynb  tut_pydantic_component_parameters.py
tutorials/tut_quickstart_hello_world/: index.html  tut_quickstart_hello_world.ipynb  tut_quickstart_hello_world.py
tutorials/tut_random_numbers/: index.html  tut_random_numbers.ipynb  tut_random_numbers.py
tutorials/tut_scenarios/: index.html  tut_scenarios.ipynb  tut_scenarios.py
tutorials/tut_spatial_mixing/: index.html  tut_spatial_mixing.ipynb  tut_spatial_mixing.py
tutorials/tut_state_arrays/: index.html  tut_state_arrays.ipynb
tutorials/tut_vaccination/: index.html  tut_vaccination.ipynb
user-guide/: index.html
user-guide/components/: index.html
user-guide/model-types/: index.html
user-guide/results/: index.html
user-guide/snapshotting/: index.html
user-guide/troubleshooting/: index.html
whatsnew/: index.html
(+290 files in other folders)
