[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project]
name = "laser.measles"
version = "0.9.1"
license-files = ["LICENSE"]
readme = "README.rst"

dependencies = [
  "numba>=0.61.0",
  "laser-core>=1.0.0",
  "diskcache>=5.6.3",
  "appdirs>=1.4.4",
  "pydantic>=2.11.5",
  "pycountry>=24.6.1",
  "requests>=2.32.3",
  "alive-progress>=3.2.0",
  "sciris>=3.2.1",
  "polars>=1.30.0",
  "pyarrow>=20.0.0",
  "rastertoolkit==0.4.6",  # Pinned to 0.3.12 until rastertoolkit resolves pyshp 3.0 compatibility (see #121)
  "typer>=0.12.0",
  "patito>=0.8.3",
  "pyvd>=1.0.1",
]

requires-python = ">= 3.10"

[tool.uv.build-backend]
module-name = [ "laser.measles" ]
source-include = ["AUTHORS.rst", "CHANGELOG.rst", "CONTRIBUTING.rst"]

authors = [
  {name = "Christopher Lorton"},
  {name = "Jonathan Bloedow"},
  {name = "Katherine Rosenfeld"},
  {name = "Kevin McCarthy"},
]
maintainers = [
  {name = "Christopher Lorton"}
]
description = "Spatial models of measles implemented with the LASER toolkit."
readme = "README.rst"
license = "MIT"
keywords = ["measles", "spatial", "modeling", "laser"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://laser-measles.readthedocs.io/en/latest/"
Repository = "https://github.com/InstituteforDiseaseModeling/laser-measles.git"
Issues = "https://github.com/InstituteforDiseaseModeling/laser-measles/issues"
Changelog = "https://github.com/InstituteforDiseaseModeling/laser-measles/blob/master/CHANGELOG.md"

[project.scripts]
laser-measles = "laser.measles.cli:app"

[tool.ruff]
extend-exclude = ["static", "ci/templates", "docs/tutorials/not_ready/*", "docs/tutorials/convert_tutorials.py", "docs/tutorials/tut_*.py"]
line-length = 140
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"ci/*" = ["S", "PLC0415"]

[tool.ruff.lint]
ignore = [
    "RUF001", # ruff-specific rules ambiguous-unicode-character-string
    "S101", # flake8-bandit assert
    "S308", # flake8-bandit suspicious-mark-safe-usage
    "S603", # flake8-bandit subprocess-without-shell-equals-true
    "S607", # flake8-bandit start-process-with-partial-path
    "E501", # pycodestyle line-too-long
]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E", # pycodestyle errors
    "EXE", # flake8-executable
    "F", # pyflakes
    "I", # isort
    "INT", # flake8-gettext
    "PIE", # flake8-pie
    "PLC", # pylint convention
    "PLE", # pylint errors
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RSE", # flake8-raise
    "RUF", # ruff-specific rules
    "S", # flake8-bandit
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
forced-separate = ["conftest"]
force-single-line = true

[tool.ruff.format]
quote-style = "double"

[tool.bumpversion]
current_version = "0.9.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "🔖 Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "🔖 Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = ".cookiecutterrc"
search = 'version: "{current_version}"'
replace = 'version: "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "docs/conf.py"
search = 'version = release = "{current_version}"'
replace = 'version = release = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/laser/measles/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-order>=1.1.1",
    "pyright",
    "mypy",
    "bump-my-version"
]
docs = [
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinxcontrib-napoleon>=0.7",
]
examples = [
    "jupytext>=1.17.2",
    "notebook>=7.4.3",
    "seaborn>=0.13.2",
    "ipykernel>=6.0.0",
    "optuna>=4.4.0",
    "plotly>=6.2.0",
]
full = [
    "ruff",
    "pytest",
    "pytest-order>=1.1.1",
    "pyright",
    "mypy",
    "bump-my-version",
    "jupytext>=1.17.2",
    "notebook>=7.4.3",
    "seaborn>=0.13.2",
    "ipykernel>=6.0.0",
    "optuna>=4.4.0",
    "plotly>=6.2.0",
]
